CloudFormations/awsTemplate.yml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  Cloud configuration file for CEG 3120.  This template will build two Ubuntu servers per project package needs.
Parameters:
  #No Windows Instances
  #WS19InstanceType:
    #Description: Windows Server instance type
    #Type: String
    #Default: t2.small
    #AllowedValues:
      #- t2.medium
  UbuntuInstanceType:
    Description: Ubuntu Server instance type
    Type: String
    Default: t2.medium
    AllowedValues:
      - t2.medium
  KeyName:
      - ceg-key
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: 'AWS::EC2::KeyPair::ceg=key'
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  SSHLocation:
    Description: ' The IP address range that can be used to access the EC2 instance'
    Type: String
    MinLength: '9'
    MaxLength: '18'
    # could restrict to home (note this is just SSH)
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
Mappings:
  AWSInstanceType2Arch:  # Supported architectures (x64bit only)
    # only care about micro
    #t2.small:
      #Arch: HVM64
    #t2.small:
      #Arch: HVM64
    t2.medium:
      Arch: HVM64
  # All Windows info
  #AWSRegionWS19: # AMI for Win Server 2019 in each supported region 
  #  us-east-1:   # N. Virginia
  #    PV64: NOT_SUPPORTED
  #    HVM64: ami-0d42fc1154bb95f55
  #    HVMG2: NOT_SUPPORTED
  #  us-east-2:   # Ohio
  #    PV64: NOT_SUPPORTED
  #    HVM64: NOT_SUPPORTED
  #    HVMG2: NOT_SUPPORTED
  #  us-west-1:   # N. California
  #    PV64: NOT_SUPPORTED
  #    HVM64: NOT_SUPPORTED
  #    HVMG2: NOT_SUPPORTED
  #  us-west-2:   # Oregon
  #    PV64: NOT_SUPPORTED
  #    HVM64: NOT_SUPPORTED
  #    HVMG2: NOT_SUPPORTED
  AWSRegionUbuntu: # AMI for Ubuntu server in each supported region 
    us-east-1:   # N. Virginia
      PV64: NOT_SUPPORTED
      #TODO: is this the AMI we want?
      HVM64: ami-06c1d7addb12a814e
      HVMG2: NOT_SUPPORTED
    us-east-2:   # Ohio
      PV64: NOT_SUPPORTED
      HVM64: NOT_SUPPORTED
      HVMG2: NOT_SUPPORTED
  #  us-west-1:   # N. California
  #    PV64: NOT_SUPPORTED
  #    HVM64: NOT_SUPPORTED
  #    HVMG2: NOT_SUPPORTED
  #  us-west-2:   # Oregon
  #    PV64: NOT_SUPPORTED
  #    HVM64: NOT_SUPPORTED
  #    HVMG2: NOT_SUPPORTED
Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: ceg-key
          Value: CEG 3120 VPC
  Subnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.0.0/24
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: ceg-key
          Value: CEG 3120 VPC
  # Have not messed with route tables / gateways before.
  # Look to see if anything unique, else move to next
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
  AttachGateway:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  RouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
  Route:
    Type: 'AWS::EC2::Route'
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  SubnetRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref Subnet
      RouteTableId: !Ref RouteTable
  # will also have 2 servers, keeping naming convention here
  Ubuntu1IPAddress:
    Type: 'AWS::EC2::EIP'
    DependsOn: AttachGateway
    Properties:
      Domain: vpc
      InstanceId: !Ref Ubuntu1Instance
  Ubuntu2IPAddress:
    Type: 'AWS::EC2::EIP'
    DependsOn: AttachGateway
    Properties:
      Domain: vpc
      InstanceId: !Ref Ubuntu2Instance
  #WS19IPAddress:
  #  Type: 'AWS::EC2::EIP'
  #  DependsOn: AttachGateway
  #  Properties:
  #    Domain: vpc
  #    InstanceId: !Ref WS19Instance
  # TODO: Setup the security groups needed by our machines
  # SSH, LDAP, HTTP, HTTPS
  LinuxSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Enable SSH access via port 22 and open ports 1025 through 2048.
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          # May be wise to go back to top where SSHLocation "variable" was made
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          # TODO: only leave ones we need.  What submet is this?
          CidrIp: 130.108.0.0/16  # WSU CIDR
        - IpProtocol: tcp
          FromPort: '1025'
          ToPort: '2048'
          CidrIp: !Ref SSHLocation
  # Not creating a Windows instance, but this is interesting to look through
  #   It allows remote desktop port 3389.  Needed if machine required desktop 
  #   environment for certain interactions
  # WS19SecurityGroup:
  #  Type: 'AWS::EC2::SecurityGroup'
  #  Properties:
  #    VpcId: !Ref VPC
  #    GroupDescription: Enable SSH access via port 22 and Remote desktop via port 3389.
  #    SecurityGroupIngress:
  #      - IpProtocol: tcp
  #        FromPort: '22'
  #        ToPort: '22'
  #        CidrIp: !Ref SSHLocation
  #      - IpProtocol: tcp
  #        FromPort: '22'
  #        ToPort: '22'
  #        CidrIp: 130.108.0.0/16  # WSU CIDR
  #      - IpProtocol: -1
  #        FromPort: '3389'
  #        ToPort: '3389'
  #        CidrIp: 130.108.0.0/16  # WSU CIDR
  #      - IpProtocol: -1
  #        FromPort: '3389'
  #        ToPort: '3389'
  #        CidrIp: !Ref SSHLocation
  #      - IpProtocol: -1
  #        FromPort: '-1'
  #        ToPort: '-1'
  #        CidrIp: 10.0.0.0/16
  #WS19Instance:
  #  Type: 'AWS::EC2::Instance'
  #  DependsOn: AttachGateway
  #  Properties:
  #    ImageId: !FindInMap 
  #      - AWSRegionWS19
  #      - !Ref 'AWS::Region'
  #      - !FindInMap 
  #        - AWSInstanceType2Arch
  #        - !Ref WS19InstanceType
  #        - Arch
  #    InstanceType: !Ref WS19InstanceType
  #    KeyName: !Ref KeyName
  #    Tags:
  #      - Key: Application
  #        Value: !Ref 'AWS::StackId'
  #      - Key: Name
  #        Value: CEG 3400 Windows Server 2019
  #    NetworkInterfaces:
  #      - GroupSet:
  #          - !Ref WS19SecurityGroup
  #        AssociatePublicIpAddress: 'true'
  #        DeviceIndex: '0'
  #        DeleteOnTermination: 'true'
  #        SubnetId: !Ref Subnet
  #        PrivateIpAddress: 10.0.0.30
  # Tie an instance to an instance type available in the region
  # TODO: Modify / append the following two instances for our usage
  #   Adjust key / value pairs to reflect systems we are creating
  Ubuntu1Instance:
    Type: 'AWS::EC2::Instance'
    DependsOn: AttachGateway
    Properties:
      ImageId: !FindInMap 
        - AWSRegionUbuntu
        - !Ref 'AWS::Region'
        - !FindInMap 
          - AWSInstanceType2Arch
          - !Ref UbuntuInstanceType
          - Arch
      InstanceType: !Ref UbuntuInstanceType
      KeyName: !Ref KeyName
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: ceg-key
          Value: CEG 3120 Ubuntu 1
      NetworkInterfaces:
        - GroupSet:
            - !Ref LinuxSecurityGroup
          AssociatePublicIpAddress: 'true'
          DeviceIndex: '0'
          DeleteOnTermination: 'true'
          SubnetId: !Ref Subnet
          PrivateIpAddress: 10.0.0.20
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash -xe
            apt-get update && \
            # reference web solution here to get a silent install working
            apt-get install -y \
              python \
              nmap \
              vim \
              git \
              wget \
              python3-dev \
              slapd \
              ldap-utils && \
            reboot
  Ubuntu2Instance:
    Type: 'AWS::EC2::Instance'
    DependsOn: AttachGateway
    Properties:
      ImageId: !FindInMap 
        - AWSRegionUbuntu
        - !Ref 'AWS::Region'
        - !FindInMap 
          - AWSInstanceType2Arch
          - !Ref UbuntuInstanceType
          - Arch
      InstanceType: !Ref UbuntuInstanceType
      KeyName: !Ref ceg-key
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: ceg-key
          Value: CEG 3120 Ubuntu 2
      NetworkInterfaces:
        - GroupSet:
            - !Ref LinuxSecurityGroup
          AssociatePublicIpAddress: 'true'
          DeviceIndex: '0'
          DeleteOnTermination: 'true'
          SubnetId: !Ref Subnet
          PrivateIpAddress: 172.31.73.59
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash -xe
            apt-get update && \
            apt-get install -y \
              python \
              nmap \
              vim \
              git \
              wget \
              python3-dev && \
            reboot
